<resources>
    <string name="app_name">HelloWord</string>
    <string name="contador">Contador!</string>
    <string name="opci_n_3">Opción 3</string>
    <string name="opci_n_2">Opción 2</string>
    <string name="opci_n_1">Opción 1</string>
    <string name="opcion_4">Opcion 4</string>
    <string name="spinner">Spinner</string>
    <string name="apagado">Apagado</string>
    <string name="encendido">Encendido</string>
</resources>
